--- a/src/config.json
+++ b/src/config.json
@@ -1,13 +1,13 @@
 {
     "31337": {
-        "nft": {
+        "NFT": {
             "address": "0x5FbDB2315678afecb367f032d93F642f64180aa3"
         }
     },
 
    
    "11155111": {
-      "nft" :{
+      "NFT" :{
         "address" : "0x3CCf7C25E9DDdD17D85052c54d13918c0EF60701"
       },
 
